--- a/public/css/partials/_global.scss
+++ b/public/css/partials/_global.scss
@@ -527,7 +527,7 @@ time {
 // Collapsible Filters Directive (Research Collections)
 .collapsible-filters {
 	position: absolute;
-	z-index: 2;
+	z-index: 1;
 	color: black;
 	background-color: white;
 	margin-top: 2px;
